--- a/PS_Policy/component.yaml
+++ b/PS_Policy/component.yaml
@@ -4,11 +4,149 @@ name: Personnel Security Policy for 18F
 satisfies:
 - control_key: PS-1
   covered_by: []
-  implementation_status: none
+  implementation_status: implemented
   narrative:
-    - text: |
-        18F Policy
+  - key: a
+    text: |
+      Agency Personnel Security Policy and Procedures
+
+      Personnel Security Policy is included in CIO P 2100.1 - GSA IT Security Policy, Chapter 4. Policy on Operational Controls.  It states, "Developing, implementing, and overseeing personnel security controls for access to personally identifiable information."
+
+      18F Program Office Personnel Security Policy
+
+      The 18F Program Office develops, documents, and disseminates to all 18F staff, the 18F Personnel Security Planning which addresses purpose, scope, roles, responsibilities, management commitment, coordination among organizational entities, and compliance and procedures to facilitate the implementation of the personnel security if information systems and associated planning controls. The 18F Audit and Accountability policy is listed within 18F’s GitHub repository https://github.com/18F/compliance-docs/blob/master/PS-Policy.md that is accessible to all 18F staff.
+  - key: b
+    text: |
+      The GSA Office of the CISO is responsible for reviewing and updating the above documents annually, and notifying System Program Managers and Information System Security Officers and Managers (ISSO/Ms).
+      The 18F Program Office will review and update the current 18F Personnel Security Policy at least every 3 years and any documented procedures at least annually.
   standard_key: NIST-800-53
+- control_key: PS-2
+  covered_by: []
+  implementation_status: implemented
+  narrative:
+  - key: a
+    text: |
+      Position Risk Designation is a Common Control provided by OCHCO Personnel Security Officer. The OHRM is responsible for developing and implementing position categorization (including third-party controls), access agreements, and personnel screening, termination, and transfers.
+  - key: b
+    text: |
+      Position Risk Designation is a Common Control provided by OCHCO Personnel Security Officer. The OHRM is responsible for developing and implementing position categorization (including third-party controls), access agreements, and personnel screening, termination, and transfers.
+  - key: c
+    text: |
+      Position Risk Designation is a Common Control provided by OCHCO Personnel Security Officer. The OHRM is responsible for developing and implementing position categorization (including third-party controls), access agreements, and personnel screening, termination, and transfers.
+  standard_key: NIST-800-53
+- control_key: PS-3
+  covered_by: []
+  implementation_status: implemented
+  narrative:
+  - key: a
+    text: |
+      Personnel Screening is a Common Control provided by the Office of Personnel Management (OPM) and Department of Homeland Security (DHS).  Screening (and re-screening) of individuals are provided by OPM and DHS (and their agents) prior to authorizing access to the GSA information systems.
+  - key: b
+    text: |
+      Personnel Screening is a Common Control provided by the Office of Personnel Management (OPM) and Department of Homeland Security (DHS).  Screening (and re-screening) of individuals are provided by OPM and DHS (and their agents) prior to authorizing access to the GSA information systems.
+  - key: c
+    text: |
+      Personnel Screening is a Common Control provided by the Office of Personnel Management (OPM) and Department of Homeland Security (DHS).  Screening (and re-screening) of individuals are provided by OPM and DHS (and their agents) prior to authorizing access to the GSA information systems.
+  standard_key: NIST-800-53
+- control_key: PS-3 (3)
+  covered_by: []
+  implementation_status: implemented
+  narrative:
+  - key: a
+    text: |
+      Personnel Screening is a Common Control provided by the Office of Personnel Management (OPM) and Department of Homeland Security (DHS).  Screening (and re-screening) of individuals are provided by OPM and DHS (and their agents) prior to authorizing access to the GSA information systems.
+  - key: b
+    text: |
+      Personnel Screening is a Common Control provided by the Office of Personnel Management (OPM) and Department of Homeland Security (DHS).  Screening (and re-screening) of individuals are provided by OPM and DHS (and their agents) prior to authorizing access to the GSA information systems.
+  standard_key: NIST-800-53
+- control_key: PS-4
+  covered_by: []
+  implementation_status: implemented
+  narrative:
+  - key: a
+    text: |
+      Disabling, termination and conducting of exit interviews are initiated and facilitated by the supervisor/CO/COR of an individual.  Retrieval of all information system-related property which includes HDPS-12 cards, authentication tokens (USB for privileged access), laptops, etc. is a common control provided by IO.  More information can be found in the GSA IT Security Procedural Guide 03-23, Termination and Transfer
+      cloud.gov disables access to accounts within the same day of termination.
+  - key: b
+    text: |
+      cloud.gov revokes all access associated to the individual the same day of termination.
+  - key: c
+    text: |
+      Disabling, termination and conducting of exit interviews are initiated and facilitated by the supervisor/CO/COR of an individual.  Retrieval of all information system-related property which includes HDPS-12 cards, authentication tokens (USB for privileged access), laptops, etc. is a common control provided by IO.  More information can be found in the GSA IT Security Procedural Guide 03-23, Termination and Transfer
+  - key: d
+    text: |
+      Disabling, termination and conducting of exit interviews are initiated and facilitated by the supervisor/CO/COR of an individual.  Retrieval of all information system-related property which includes HDPS-12 cards, authentication tokens (USB for privileged access), laptops, etc. is a common control provided by IO.  More information can be found in the GSA IT Security Procedural Guide 03-23, Termination and Transfer
+  - key: e
+    text: |
+      Disabling, termination and conducting of exit interviews are initiated and facilitated by the supervisor/CO/COR of an individual.  Retrieval of all information system-related property which includes HDPS-12 cards, authentication tokens (USB for privileged access), laptops, etc. is a common control provided by IO.  More information can be found in the GSA IT Security Procedural Guide 03-23, Termination and Transfer
+  - key: f
+    text: |
+      Disabling, termination and conducting of exit interviews are initiated and facilitated by the supervisor/CO/COR of an individual.  Retrieval of all information system-related property which includes HDPS-12 cards, authentication tokens (USB for privileged access), laptops, etc. is a common control provided by IO.  More information can be found in the GSA IT Security Procedural Guide 03-23, Termination and Transfer
+  standard_key: NIST-800-53
+- control_key: PS-5
+  covered_by: []
+  implementation_status: implemented
+  narrative:
+  - key: a
+    text: |
+      Review of ongoing operational need for current logical and physical access by individuals are initiated and facilitated by supervisor/CO/COR.  Retrieval of all information system-related property which includes HDPS-12 cards, authentication tokens (USB for privileged access), laptops, etc. is a common control provided by IO.
+      cloud.gov revokes privileged access if an indivdiual is reassigned or transferred outside of the team.
+  - key: b
+    text: |
+      cloud.gov initiates the revoking process within the same day of an individual being transferred outside of the team.
+  - key: c
+    text: |
+      cloud.gov modifies permissions granted to individuals to correspond any changes in the individual requirements.
+  - key: d
+    text: |
+      18F notifies cloud.gov operators within 5 days of a formal transfer action.
+  standard_key: NIST-800-53
+- control_key: PS-6
+  covered_by: []
+  implementation_status: planned
+  narrative:
+  - key: a
+    text: |
+      cloud.gov develops and documents access agreements for all users accessing the system.
+  - key: b
+    text: |
+      cloud.gov reviews and updates the agreements at least once a year.
+  - key: c
+    text: |
+      cloud.gov requires all users being granted access to accept the agreement every time they enter the system.
+  standard_key: NIST-800-53
+- control_key: PS-7
+  covered_by: []
+  implementation_status: implemented
+  narrative:
+  - key: a
+    text: |
+      GSA establishes personnel security requirements for third-party providers.
+  - key: b
+    text: |
+      GSA requires third-party providers to comply with GSA policies, undergo background checks and attend security trainings.
+  - key: c
+    text: |
+      GSA documents the security requirements as part of the procurement process with third parties.
+  - key: d
+    text: |
+      GSA requires that all third-parties notify the Contracting Officers of any activity on the third-party's personnel within a day.
+  - key: e
+    text: |
+      GSA monitors compliance from providers at least monthly.
+  standard_key: NIST-800-53
+- control_key: PS-8
+  covered_by: []
+  implementation_status: pending
+  narrative:
+  - key: a
+    text: |
+      TODO
+  - key: b
+    text: |
+      TODO
+  standard_key: NIST-800-53
+
 schema_version: 3.0.0
 system: 18F
 verifications:
