--- a/PS_Policy/component.yaml
+++ b/PS_Policy/component.yaml
@@ -4,7 +4,7 @@ name: Personnel Security Policy for 18F
 satisfies:
 - control_key: PS-1
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative:
   - key: a
     text: |
@@ -22,7 +22,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: PS-2
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative:
   - key: a
     text: |
@@ -36,7 +36,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: PS-3
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative:
   - key: a
     text: |
@@ -50,7 +50,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: PS-3 (3)
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative:
   - key: a
     text: |
@@ -61,7 +61,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: PS-4
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative:
   - key: a
     text: |
@@ -85,7 +85,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: PS-5
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative:
   - key: a
     text: |
@@ -117,7 +117,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: PS-7
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative:
   - key: a
     text: |
@@ -137,7 +137,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: PS-8
   covered_by: []
-  implementation_status: pending
+  implementation_status: planned
   narrative:
   - key: a
     text: |
